[build-system]
requires = ["setuptools>=81.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dreams"
version = "1.0.0"
description = "DreaMS (Deep Representations Empowering the Annotation of Mass Spectra)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "DreaMS developers" }]
requires-python = ">=3.10.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.25.0",
    "numba>=0.58.0",
    "torch>=2.2.1",
    "pytorch-lightning>=2.0.8",
    "torchmetrics>=1.3.2",
    "pandas>=2.2.1,<3.0",
    "pyarrow>=15.0.2",
    "h5py>=3.11.0",
    "rdkit>=2023.9.6",
    "umap-learn>=0.5.6",
    "scikit-learn<1.6",
    "seaborn>=0.13.2",
    "plotly>=5.20.0",
    "ase>=3.22.1",
    "wandb>=0.16.4",
    "pandarallel>=1.6.5",
    "matchms>=0.27.0",
    "pyopenms==3.3.0; sys_platform == 'darwin'",
    "pyopenms==3.4.0; sys_platform != 'darwin'",
    "igraph>=0.11.4",
    "molplotly>=1.1.7",
    "fire>=0.6.0",
    "huggingface_hub>=0.33.5",
    "setuptools>=81.0.0",
    "msml @ git+https://github.com/roman-bushuiev/msml_legacy_architectures.git@main",
    "hdf5plugin>=7.0.0",
    "pypatree>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/pluskal-lab/DreaMS"

[project.optional-dependencies]
dev = [
    "black>=24.4.2",
    "pytest>=8.2.1",
    "pytest-cov>=5.0.0",
    "Cython>=3.0.9",
    "SpectralEntropy @ git+https://github.com/YuanyueLi/SpectralEntropy@a1151cfcd9adc66e46f95fb3b06a660e1b0c9b56#egg=SpectralEntropy",
]
notebooks = [
    "jupyter>=1.0.0",
    "ipywidgets>=8.1.3",
]

[tool.setuptools.packages.find]
include = ["dreams*"]

[tool.uv.extra-build-dependencies]
spectralentropy = ["Cython", "numpy"]
